Fixed landscape mode on smaller devices

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1045,7 +1045,7 @@ input:focus {
 
 .login-box2 {
   width: 50%;
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
   background-color: $background-color;
   @include flexBox(column);
